# News

./: .gitignore  CMakeLists.txt  README.md  agent_handover.md  implementation_plan.md  state_of_the_art_study.md
client/: client_main.cc  client_main.cpp  news_client.cc  news_client.h
config/: users.conf.example
include/news/: authenticator.h  byte_buffer.h  config.h  epoll_server.h  epoll_server.hpp  news_publisher.h  news_record.h  protocol.h  protocol.hpp  replay_ring.h  replay_ring.hpp  session.h  session.hpp  wal.h  wal.hpp
src/: authenticator.cc  binary_encoding.h  byte_buffer.cc  config.cc  config.cpp  epoll_server.cc  epoll_server.cpp  news_publisher.cc  protocol.cc  protocol.cpp  replay_ring.cc  replay_ring.cpp  server_main.cc  session.cc  session.cpp  wal.cc  wal.cpp
tests/: authenticator_test.cc  integration_test.cc  integration_tests.cpp  protocol_test.cc  replay_ring_test.cc  replay_ring_tests.cpp  wal_test.cc  wal_tests.cpp
